[project]
name = "understanding-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deepagents>=0.6.8",
    "langchain[google-genai]>=1.3.4",
    "langgraph>=1.2.4",
    "langgraph-cli[inmem]>=0.4.27",
    "python-dotenv>=1.2.2",
]

[tool.uv.workspace]
members = [
    "understanding_agents",
]
